minor cleanup