@@ -312,180 +312,8 @@
                     </configuration>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.codehaus.cargo</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>${cargo-maven2-plugin.version}</version>
-                    <configuration>
-                        <wait>true</wait>
-                        <container>
-                            <containerId>tomcat8x</containerId>
-                            <type>embedded</type>
-                            <systemProperties>
-                                <!-- <provPersistenceTarget>cargo</provPersistenceTarget> -->
-                            </systemProperties>
-                        </container>
-                        <configuration>
-                            <properties>
-                                <cargo.servlet.port>8082</cargo.servlet.port>
-                            </properties>
-                        </configuration>
-                    </configuration>
-                </plugin>
-
-                <!-- webapp runner -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>2.10</version>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>copy</goal>
-                            </goals>
-                            <configuration>
-                                <artifactItems>
-                                    <artifactItem>
-                                        <groupId>com.github.jsimone</groupId>
-                                        <artifactId>webapp-runner</artifactId>
-                                        <version>7.0.57.2</version>
-                                        <destFileName>webapp-runner.jar</destFileName>
-                                    </artifactItem>
-                                </artifactItems>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-
-
-                <!-- Gatling -->
-                <plugin>
-                    <groupId>io.gatling</groupId>
-                    <artifactId>gatling-maven-plugin</artifactId>
-                    <version>2.1.7</version>
-                    <configuration>
-                        <simulationsFolder>src/test/gatling</simulationsFolder>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>execute</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
             </plugins>
         </pluginManagement>
     </build>
-
-    <profiles>
-
-        <profile>
-            <id>integration</id>
-            <build>
-
-                <plugins>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/*UnitTest.java</exclude>
-                                <exclude>**/*LiveTest.java</exclude>
-                            </excludes>
-                            <systemPropertyVariables>
-                                <envTarget>test</envTarget>
-                            </systemPropertyVariables>
-                        </configuration>
-                    </plugin>
-                </plugins>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>live</id>
-            <build>
-
-                <plugins>
-
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <configuration>
-                            <wait>false</wait>
-                            <container>
-                                <containerId>tomcat8x</containerId>
-                                <type>embedded</type>
-                                <systemProperties>
-                                    <!-- <secPersistenceTarget>cargo</secPersistenceTarget> -->
-                                    <!-- <launchpadTarget>maven</launchpadTarget> -->
-                                    <!-- <cargo.jvmargs>-XX:MaxPermSize=512m -Xmx768m</cargo.jvmargs> -->
-                                </systemProperties>
-                            </container>
-                            <configuration>
-                                <properties>
-                                    <cargo.servlet.port>8082</cargo.servlet.port>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>start-server</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>stop-server</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/*UnitTest.java</exclude>
-                                <exclude>**/*IntegrationTest.java</exclude>
-                                <exclude>**/*LiveTest.java</exclude>
-                            </excludes>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <excludes>
-                                        <exclude>**/*IntegrationTest.java</exclude>
-                                        <exclude>**/*UnitTest.java</exclude>
-                                    </excludes>
-                                    <includes>
-                                        <include>**/*LiveTest.java</include>
-                                    </includes>
-                                    <systemPropertyVariables>
-                                        <envTarget>test</envTarget>
-                                    </systemPropertyVariables>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                </plugins>
-
-            </build>
-        </profile>
-    </profiles>
 
 </project>
